--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,6 +13,8 @@
     <string name="no_have_account">No have an account?</string>
     <string name="welcome_to_tech4life">Welcome to Tech4Life! Join us to find useful information required to improve your skills</string>
     <string name="already_have_account">Already have an account</string>
-
+    <string name="open">Open</string>
+    <string name="close">Close</string>
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 </resources>
