add comment to detail post

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,5 +19,6 @@
     <string name="ok">OK</string>
     <string name="report_sussecced">Report Sussecced</string>
     <string name="report_fail">Report Fail. Plase check your input</string>
+    <string name="arrow_function_trong_javascript_es6_v_t_i_sao_ph_i_dung_n">Arrow Function trong JavaScript ES6 và tại sao phải dung nó?</string>
 
 </resources>
